<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.Form.FormFragment">

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:autofillHints="hint_nama"
        android:hint="@string/hint_nama"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/hobby"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/hint_hobby"
        android:hint="@string/hint_hobby"
        android:imeActionLabel="@string/action_save"
        android:imeOptions="actionDone"
        android:inputType="text|textNoSuggestions"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hobby" />

    <TextView
        android:id="@+id/nameOutput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <TextView
        android:id="@+id/hobbyOutput"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameOutput" />


</androidx.constraintlayout.widget.ConstraintLayout>